Release e4steam 0.2.4